# polycode

./: .env.example  LICENSE  README.md  pyproject.toml
docs/superpowers/plans/: 2026-04-05-opencode-mcp.md
docs/superpowers/specs/: 2026-04-05-opencode-mcp-design.md
opencode_mcp/: errors.py  opencode_client.py  opencode_process.py  server.py  session_manager.py  tools.py
opencode_mcp/helpers/: __init__.py  cli_runner.py
opencode_mcp/routers/: __init__.py  gemini.py  opencode.py  qwen.py
tests/: conftest.py  test_cli_runner.py  test_errors.py  test_integration.py  test_opencode_client.py  test_opencode_process.py  test_session_manager.py
