[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "opencode-mcp"
version = "0.1.0"
description = "MCP server wrapping opencode's headless HTTP server"
license = { text = "MIT" }
authors = [
    { name = "h19overflow" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
]

[project.scripts]
opencode-mcp = "opencode_mcp.server:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.12.0",
    "respx>=0.21.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "module"
markers = [
    "integration: requires opencode binary and ollama/qwen3.5:cloud",
    "e2e: full MCP client round-trip test",
]

[tool.hatch.build.targets.wheel]
packages = ["opencode_mcp"]
